[package]
name = "spbench"
version = "0.1.0"
authors = ["Kristofer Bengtsson <kristofer@sekvensa.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {git="https://github.com/kristoferB/async-std", version = "1.2.0", features = ["unstable"]}
pin-project-lite = "0.1.1"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "raw_eval_bench"
harness = false